Fix button dimensions in Firefox
Fix buttons being a few pixels too big by resetting focus-inner default styles.

--- a/src/styles/extends/button.scss
+++ b/src/styles/extends/button.scss
@@ -25,6 +25,12 @@
 	&[disabled] {
 		color: tint($text-color, 75);
 	}
+
+	// Fixing button dimensions in Firefox
+	&::-moz-focus-inner {
+		border-style: none;
+		padding: 0;
+	}
 }
 
 %button-active {
